Use `simple-grpc` (make request-serving pathways blocking)